# safeflat

./: .gitignore  Dockerfile  Location Appartement 6 pièces Strasbourg - Appartement F6_T6_6 pièces 115 m² 1395€_mois - SeLoger (28_01_2024 13_24_50).html  Studio 1 pièce 18 m² - Locations.html  buildLayer.sh  cdc_ia.xlsx  cdc_v1.docx  common.yml  draft.yaml  features-per-website.xlsx  output.csv  pap-example.html  prod.yml  pyproject.toml  requirements.txt  temp_requirements.txt  template.yaml  useful_features_for_detection.txt  websites-specs.xlsx
.github/workflows/: common.yml  dev.yml  prod.yml  test.yml  test2.yml
abritel-retrieve-urls/annonces/: annonce1.html
abritel-scrape-urls/annonces/: output.json
airbnb-retrieve-urls/outputs_csv/: df_data.csv
archive/: Dockerfile  lambdaTest.py  output_processed.csv
archive-refactoring/abritel-retrieve-urls/: utils.py
archive-refactoring/abritel-scrape-urls/: utils.py
archive-refactoring/airbnb-scrape-urls/: main.py
archive-refactoring/leboncoin-scrape-urls/: utils.py
archive-refactoring/seloger-retrieve-urls/: utils.py
archive/Function1/: main.py
archive/abritel/: Résultats de la recherche de locations de vacances pour Paris (et environs), France (18_04_2024 19_06_30).html  main.py  output.csv  utils.py
archive/abritel-scrape-urls/: utils.py
archive/airbnb/: airbnb.ipynb  algov1.py  preprocessing.py  script_maps.js  test.py  utils.py
archive/airbnb-retrieve-urls/: draft.py  utils.py
archive/leboncoin/: example.html  main.py  oxylab.py  search_result.html  utils.py
archive/leboncoin-retrieve-urls/: utils.py
archive/leboncoin-scrape-urls/: utils.py
archive/pap/: draft.py  main.py  output.csv  result.html  saveToDatabase.py
archive/papRetrieveUrls/: utils.py
archive/papScrapeUrls/: utils.py
archive/seloger/: algov1.py  poc.py  utils.py  (+3 more)
archive/seloger-retrieve-urls/: utils.py
docs/: conf.py  index.rst  modules.rst
gensdeconfiance/: process_outputs.py  search_results.html
leboncoin-scrape-urls/: main.py
oxylab/: oxylab-poc.py  result.html
retrieveUrls/: main.py  utils.py
safeflat-sam-app/: README.md  samconfig.toml  template.yaml  test.py  test_abritel.py  test_airbnb.py  test_lbc.py  test_seloger.py
scrapeUrls/: abritel_scraper.py  leboncoin_scraper.py  main.py  pap_postprocessing.py  pap_scraper.py  utils.py
scraping/: downlaod_html_content.py
scripts/: install-types-stubs.py
(+230 files in other folders)
