[tool.poetry]
name = "safeflat"
version = "0.1.0"
description = ""
authors = ["safeflat"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
undetected-chromedriver = "^3.5.5"
tqdm = "^4.66.2"
selenium = "^4.19.0"
sqlalchemy = "^2.0.29"
pymysql = "^1.1.0"
langchain-openai = "^0.1.4"
beautifulsoup4 = "^4.12.3"
python-dotenv = "^1.0.1"
geopy = "^2.4.1"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pylint = "^3.1.0"
awscli = "^1.32.95"
poetry-plugin-export = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"